upgrade for odoo19.2

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,6 +1,7 @@
 [options]
 addons_path = /work/odoo/addons/,/mnt/extra-addons
 data_dir = /var/lib/odoo
+http_interface = 0.0.0.0
 ; admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
